# python-project-83

./: .env  Makefile  README.md  build.sh  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
page_analyzer/: app.py  database.py  tools.py
page_analyzer/templates/: index.html  start_page.html  url_id.html  url_id_error.html  urls_list.html
