[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker>=1.9.0",
    "click>=8.1.7",
    "flask>=3.1.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "pip>=24.0",
    "werkzeug>=3.1.3",
    "gunicorn>=23.0.0",
    "packaging>=25.0",
    "python-dotenv>=1.1.1",
    "certifi>=2025.7.14",
    "charset-normalizer>=3.4.2",
    "idna>=3.10",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
    "psycopg2-binary>=2.9.10",
    "beautifulsoup4>=4.13.4",
    "soupsieve>=2.7",
    "typing-extensions>=4.14.1",
    "validators>=0.35.0",
    "ruff>=0.12.9"
]

[tool.ruff]
line-length = 80

[lint.per-file-ignores]
"__init__.py" = ["F401"]

[lint]
preview = true
select = ["E", "F", "I", "C90"]
